<resources>
    <string name="app_name">Tarmeez App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email"> %s أدخل بريدك الإلكتروني</string>
    <string name="enter_password">%s أدخل كلمة المرور</string>
    <string name="forget_password">هل نسيت كلمة المرور؟</string>
    <string name="login">تسجيل الدخول</string>
    <string name="error_message">  خطأ في البيانات المدخلة %s </string>
    <string name="new_account">إنشاء حساب جديد</string>
    <string name="password_confirmation">أدخل تأكيد كلمة المرور</string>
    <string name="has_account">لديك حساب بالفعل؟</string>
    <string name="create_account">إنشاء حساب</string>
    <string name="already_exist"> %s الحساب موجود بالفعل</string>
    <string name="enter_your_email">فضلاً أدخل البريد الإلكتروني"</string>
    <string name="enter_your_password">فضلاً أدخل كلمة المرور"</string>
    <string name="un_matched_password">كلمة المرور غير متطابقة</string>
    <string name="password_more_than_six">كلمة المرور يجب أن لا تقل عن 6 أحرف</string>
    <string name="invalid_email">البريد الالكتروني غير صالح</string>
    <string name="questions_number">سؤال %d/%d</string>
    <string name="quiz_button">اختبر معلوماتك</string>
    <string name="back_to_sections">العودة إلى الاقسام</string>
    <string name="forgot_password">استعادة كلمة المرور</string>
</resources>