<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <com.airbnb.lottie.LottieAnimationView
        app:lottie_autoPlay="true"
        app:lottie_fileName="login.json"
        app:lottie_loop="true"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginEnd="2dp" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittext_style"
        android:inputType="textEmailAddress"
        android:gravity="right"
        android:drawableEnd="@drawable/ic_baseline_email_24"
        android:textSize="14sp"
        android:singleLine="true"
        android:nextFocusDown="@id/user_password"
        tools:ignore="RtlHardcoded" />
    <EditText
        android:id="@+id/user_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/edittext_style"
        android:inputType="textPassword"
        android:gravity="right"
        android:drawableEnd="@drawable/ic_baseline_lock_24"
        android:textSize="14sp"
        android:singleLine="true"
        android:nextFocusDown="@id/login"
        tools:ignore="RtlHardcoded" />
    <Button
        android:id="@+id/login"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:background="@drawable/button_style"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/forgot_password"
        android:textColor="@color/pink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="220dp"
        android:text="@string/forget_password"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/new_account"
        android:textColor="@color/pink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="240dp"
        android:text="@string/new_account"
        tools:ignore="SmallSp" />
</FrameLayout>